[b]Version 0.6.7[/b]:

(2009-01-26)
 * (Playlist) When a file is added to the playlist, if it was already in
   the list, it's moved to the end of the list.

(2009-01-24)
 * (Videopreview) Add jpg to the "extract frame as" combobox only if the
   jpg format is available for reading.
 * The direct3d video output is now the default for Windows Vista (untested).

(2009-01-18)
 * The dvdnav actions are now only enabled when playing a dvd (using dvdnav).

(2009-01-17)
 * Now the mplayer process is not restarted when loading an external subtitle
   file (using the sub_load slave command), except for idx/sub subtitles. 

(2009-01-15)
 * (Windows) Now the screensaver is allowed to turn on if the file is
    paused or it's an audio file.
 * The "it's a playlist" option in the Open URL dialog is automatically
   checked if the url ends with ".ram", ".asx" or ".m3u" (and unchecked if
   it ends with another extension).

(2009-01-14)
 * New option for the config file: user_forced_ass_style under the 
   [subtitles] section. If the value is not an empty string, it will be
   passed to mplayer for the -ass-force-style option, overriding the string
   generated automatically by smplayer.
 * Added a "Customize" button in the SSA/ASS section in preferences to
   allow the user to customize the SSA/ASS style which will be passed to
   mplayer with the -ass-force-style option.

(2009-01-12)
 * (Fix) When opening an iso file, start to play from the dvd menu instead
   of title 1.
 * Added a new option to select the shadow color for ass subtitles.

(2009-01-11)
 * Now it's possible to play a dvd with menus from command line 
   (smplayer dvdnav://) or by selecting "dvdnav://" from the recents menu.
   It'll even work if the option "Enable DVD menus" is not checked.
 * Now the highlighted option in the DVD menu changes when the mouse is
   moved.

(2009-01-10)
 * Fixed the initialization of the Angles menu when using dvdnav.